# Mathbook

./: .gitignore  book.tex  preamble.tex  sources.md  template.tex
Calc/docs/new/: Applet.cc
GRender/: Cargo.toml
Notes/LogicNotes/: template_Article.aux  template_Article.tex  template_Article.toc
Notes/ProofsNotes/: proofnotes.aux  proofnotes.tex  proofnotes.toc
Plots/: rectangle.py  segment.py  test.py
VDraw/: trash
VDraw/src/: VDrawViewer.cc  main.c  main.rs  run.sh  v_vector.c  vlist.c
VDraw/src/VDrawContext/: mod.rs
VDrawrs/: Cargo.toml
fiber-rs/: Cargo.toml  a.txt  release_run.sh  run.sh  test.sh
fiber-rs/src/: ignorethis  main.rs
fiber-rs/src/fiber/: canvas.rs  canvas3d.rs  framerate.rs  mod.rs  surface.rs  temp  ui.rs  utils.rs
fiber-rs/src/tests/: reg.py
fiber/docs/: run  shader.cc  shader.h  test1.cc  texture.cc  texture.frag  texture.h
fiber/docs/new/: Applet.cc  Applet.h  Utils.h
jason44.github.io/: package-lock.json  package.json
jason44.github.io/src/: article_template.html  dependencies.sh  index.html  make_md.mjs  markdown_engine.mjs
nextjs-blog/: package-lock.json  package.json
nextjs-blog/pages/: index.js
nextjs-blog/pages/posts/: first-post.js
plots/: .gitignore.swp  circle.py  congruent-sides.py  facetest.py  lines.py  nxn.py  poly.py  pythagorean.py  quadrants.py  rectangle.py  remove_coordinates.py  right_bisector.py  wrappers.py
sm_videos/: hrun.sh  irun.sh  prun.sh  quadratic_proof.kdenlive  quadratic_proof.py  quadratic_proof_vertical.kdenlive  run.sh  script1.md  utils.py
(+4 files in other folders)
