[package]
name = "fiber-rs"
version = "0.1.0"
edition = "2021"
categories = ["graphics", "gui", "rendering"]
description = "Applets for the web"
exclude = ["assets/", "tools/", ".github/", "crates/", "examples/wasm/assets/"]
#homepage = ""
keywords = ["engine", "graphics"]
license = "MIT"
readme = "README.md"
#repository = ""
#rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_prototype_lyon = "0.8.0"
bevy_egui = "0.20"
atoi = "2.0.0"
regex = "1.7.3"

# enable small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# enable high optimization for dependencies, but not for our project
[profile.dev.package."*"]
opt-level = 3


# cargo run --features bevy/dynamic_linking <- for faster compiles, link dynamically


